mdapipkg/source/objects/Topic_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Digital_Resource__c</referenceTo>
        <relationshipLabel>Topic Resources</relationshipLabel>
        <relationshipName>Topic_Resources1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>Topic Resources</relationshipLabel>
        <relationshipName>Topic_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Topic Resource</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Topic Resource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topic Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>